// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `<ArticleError />`;

exports[`2. an article with no headline falls back to use shortheadline 1`] = `
<ArticleSkeleton>
  <View>
    <View />
    <View>
      <Text
        selectable={true}
      >
        Some Short Headline
      </Text>
      <ArticleFlags />
    </View>
    <View>
      <View>
        <Text>
          Friday March 13 2015, 6:54pm, The Times
        </Text>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;

exports[`3. an article with ads 1`] = `
<ArticleSkeleton>
  <View>
    <View />
    <View>
      <Text
        selectable={true}
      >
        Some Headline
      </Text>
      <ArticleFlags />
    </View>
    <View>
      <View>
        <Text>
          Friday March 13 2015, 6:54pm, The Times
        </Text>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;
